--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "jsdom": "^15.2.1",
     "pouchdb": "^7.1.1",
     "react": "^16.10.2",
+    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.1",
     "tslib": "^1.10.0",
     "uuid": "^3.3.3"
   },
